<resources>
    <string name="app_name">Component Demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rx_java_test_login">RxJavaTestLoginActivity</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密 码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"欢 迎 !"</string>
    <string name="invalid_username">用户名非法</string>
    <string name="invalid_password">密码必须大于5个字符</string>
    <string name="login_failed">"登录失败"</string>
    <string name="login">登录</string>
    <string name="hitokoto_title">一言</string>
    <string name="home">心之所向❤素履以往</string>
    <string name="middle_line">"—— "</string>
    <string name="today_weather_title">天气状况</string>
    <string name="weekly_weather_title">一周天气</string>
    <string name="usage_stats_report_title">屏幕使用情况</string>
    <string name="hotspot_title">热搜榜</string>
    <string name="weibo_hotspot">微博热搜</string>
    <string name="zhihu_hotspot">知乎热搜</string>
    <string name="douyin_hotspot">抖音热搜</string>
    <string name="msg_network_is_unavailable">网络不可用。</string>
    <string name="hotspot_tag">热</string>
    <string name="placeholder">——</string>
    <string name="celsius_symbol">°</string>
    <string name="temperature_max">最高</string>
    <string name="temperature_min">最低</string>
    <string name="more_weather_info">更多天气信息</string>
    <string name="more_weather_info_link">http://hfx.link/2bc1</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="weather_header">天气</string>
</resources>
